# OpenEnv

./: .coveragerc  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  EmailTriage_GRPO_Train.ipynb  GEO_BENCHMARK_STUDIES.md  PR_README.md  README.md  _version.py  app.py  atari_example.py  docs_audit.csv  docs_reorganization_proposal.md  inference.py  openenv.yaml  pre_training.json  pyproject.toml  test_my_env.py
envs/carla_env/: .development_history.md  DEPLOYMENT_GUIDE.md  README.md  client.py  models.py  pyproject.toml  test_day2_http.sh  test_deadzone_production.py  test_deadzone_scenarios.py  test_deploy.py  test_maze_navigation.py  test_maze_production.py
envs/carla_env/server/: Dockerfile  Dockerfile.real  Dockerfile.real-standalone  carla_environment.py  logging.py  requirements.txt  scenario_adapter.py  scenarios.py
envs/carla_env/server/_carla_agents/: README.md
envs/carla_env/server/_carla_agents/navigation/: basic_agent.py  behavior_agent.py  constant_velocity_agent.py  controller.py  global_route_planner.py  local_planner.py
envs/carla_env/server/benchmark_scenarios/: __init__.py  action_bias.py  base.py  free_roam.py  shared.py  trolley_micro.py
envs/carla_env/server/carla_agents/: README.md
envs/carla_env/server/carla_agents/navigation/: basic_agent.py  (+5 more)
envs/carla_env/server/data/: __init__.py
envs/email_triage_env/: .env.example  .gitignore  BLOG.md  FINAL_SHOWCASE_README.md  PITCH_SCRIPT.md  README.md  README_NEXT_STEPS.md  Rhushya_OpenEnv_EmailTriage_Training (1).ipynb  Rhushya_OpenEnv_EmailTriage_Training.ipynb  SPACE_README.md  __init__.py  baseline_results.json  client.py  colab_t4_training.ipynb  eval_benchmark.py  final_running.ipynb  inference.py  models.py  oversight_inbox_arena_pitch_doc.md  pyproject.toml  test_env.py  train_grpo.py
envs/email_triage_env/hf_space_template/: README.md  app.py  requirements.txt
envs/email_triage_env/server/: Dockerfile  app.py  email_triage_dataset.json  email_triage_environment.py  graders.py  scenario_generator.py  schema_drift.py  stakeholders.py  ui.py
envs/email_triage_env/training_notebooks/: 1.ipynb  2.ipynb  3.ipynb  4.ipynb
envs/openapp_env/: README.md  client.py  models.py  pyproject.toml
envs/openapp_env/server/: Dockerfile  app.py  openapp_environment.py  start.sh
envs/openclaw_env/: README.md  __init__.py  client.py  openenv.yaml  pyproject.toml
envs/openclaw_env/server/: Dockerfile  __init__.py  app.py  openclaw_environment.py  requirements.txt
envs/opencode_env/: README.md  __init__.py  config.py  harness.py  interception.py  live_watch.py  opencode_client.py  pyproject.toml
envs/opencode_env/sandbox/: __init__.py  e2b.py  interception.py
envs/opencode_env/server/: opencode_environment.py
envs/opencode_env/tests/: test_config.py  test_harness.py  test_harness_live_mode_b.py  test_harness_live_openai.py  test_harness_live_vllm.py  test_interception.py  test_opencode_client.py  test_opencode_runtime.py  test_sandbox_base.py  test_sandbox_e2b.py  test_task.py
envs/pathway_analysis_env/: .gitignore  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
envs/pathway_analysis_env/bench/: Dockerfile  README.md  download_hg38_gencode.py  geo_agent_eval.py  geo_openenv_deseq2.py  run_study1_gse128911_end_to_end.py  run_study3_gse235350_end_to_end.py  run_study4_gse111151_end_to_end.py  run_study5_gse216540_end_to_end.py  run_true_counts_pipeline.py
envs/pathway_analysis_env/bench/studies/: gse235350_samples.json
envs/pathway_analysis_env/data/: fake_rnaseq_detailed.json  gse227102_mcf7_case.json  gse227102_mcf7_counts_like_case.json  gse227102_t47d_case.json  gse227102_t47d_counts_like_case.json  gse235417_case.json  toy_case_001.json  toy_case_002.json  toy_case_legacy.json  toy_case_no_default.json
envs/pathway_analysis_env/data/geo_eval/: geo_agent_eval_studies.json
envs/pathway_analysis_env/docs/: ADVISOR_MEETING_PRESENTATION.md  ADVISOR_PRESENTATION.html  ADVISOR_PRESENTATION.pptx  ADVISOR_PRESENTATION_SIMPLE.pptx  BENCHMARK_REPORT.md  FAILURE_CODES.md  GEO_BENCHMARK_STUDIES.md  GSE235417_RESULTS.md  GSE235417_RESULTS_DETAILED.md  INTERVIEW_PITCH_DECK.md  USER_GUIDE_UI.md
envs/pathway_analysis_env/scripts/: build_advisor_deck_pptx.py  build_fake_rnaseq_detailed_case.py  build_pitch_deck_pptx.py  generate_curriculum_cases.py  run_benchmark.py  run_gse227102_author_benchmark.py  run_gse227102_counts_from_author.py  run_performance_report.py
envs/pathway_analysis_env/server/: Dockerfile  analysis.py  app.py  failure_codes.py  gradio_ui.py  pathway_environment.py
envs/reasoning_gym_env/: README.md  __init__.py  client.py  openenv.yaml  pyproject.toml
envs/reasoning_gym_env/server/: Dockerfile  app.py  reasoning_gym_environment.py
src/envs/connect4_env/: .gitignore  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
src/envs/connect4_env/server/: Dockerfile  __init__.py  app.py  connect4_environment.py
src/envs/doom_env/: GIF_GENERATION.md  README.md  __init__.py  client.py  example.py  generate_gifs.py  models.py  openenv.yaml  pyproject.toml  pytest.ini
src/envs/doom_env/assets/: .gitkeep  README.md  demo.html
src/envs/doom_env/server/: Dockerfile  __init__.py  app.py  doom_env_environment.py  requirements.txt
src/envs/doom_env/tests/: README.md  __init__.py  conftest.py  test_doom_client.py  test_doom_environment.py  test_doom_integration.py  test_models.py
src/envs/minesweeper_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
src/envs/minesweeper_env/server/: Dockerfile  __init__.py  app.py  build_docker.sh  minesweeper_environment.py
src/envs/openapp_env/: README.md  client.py  pyproject.toml  test_openapp_env.py
src/envs/openapp_env/assets/: demo-showcase.html
src/envs/openapp_env/server/: Dockerfile  app.py  openapp_environment.py
src/envs/warehouse_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
src/envs/warehouse_env/server/: Dockerfile  __init__.py  app.py  demo.html  requirements.txt  warehouse_environment.py
(+2512 files in other folders)
