[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-env"
version = "0.1.0"
description = "An e2e framework for creating, deploying and using isolated execution environments for agentic RL training"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}
keywords = ["agentic", "rl", "reinforcement-learning", "gymnasium", "docker", "environments"]

dependencies = [
    "torch>=1.9.0",
    "numpy>=1.19.0",
    "requests>=2.25.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "smolagents>=1.22.0,<2"
]

[project.urls]
Homepage = "https://github.com/meta-pytorch/OpenEnv"
Documentation = "https://github.com/meta-pytorch/OpenEnv/blob/main/README.md"
Repository = "https://github.com/meta-pytorch/OpenEnv"
Issues = "https://github.com/meta-pytorch/OpenEnv/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["open_env*"]
