[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.19.0",
    "requests>=2.25.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "smolagents>=1.22.0,<2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "_version.__version__"}
