[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=1.9.0",
    "numpy>=1.19.0",
    "requests>=2.25.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "smolagents>=1.22.0,<2",
    "huggingface_hub>=0.20.0",
    "rich>=13.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
openenv = "openenv_cli.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0"
]
