[project]
name = "openclaw-env"
version = "0.1.0"
description = "OpenClaw agentic environment for RL training"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
keywords = ["openenv", "openclaw", "agents", "reinforcement-learning", "mcp"]
authors = [
    { name = "OpenClaw Team" },
    { name = "Meta PyTorch Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openenv-core>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/meta-pytorch/OpenEnv"
Documentation = "https://meta-pytorch.org/OpenEnv/"
Repository = "https://github.com/meta-pytorch/OpenEnv"

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
