[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-opencode_env"
version = "0.1.0"
description = "OpenCode harness primitive for OpenEnv — runs the OpenCode CLI agent in a sandbox against any OpenAI-compatible endpoint."
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "e2b>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
packages = ["opencode_env", "opencode_env.sandbox", "opencode_env.tests"]
package-dir = { "opencode_env" = ".", "opencode_env.sandbox" = "sandbox", "opencode_env.tests" = "tests" }

[tool.setuptools.package-data]
opencode_env = ["**/*.md"]
