# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-pathway-analysis-env"
version = "0.1.0"
description = "Toy pathway analysis environment for OpenEnv — identify activated signaling pathways from synthetic omics data"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.1",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "pydeseq2>=0.4.0",
    "anndata>=0.10.0",
    "gseapy>=1.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "pathway_analysis_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["pathway_analysis_env", "pathway_analysis_env.server"]
package-dir = { "pathway_analysis_env" = ".", "pathway_analysis_env.server" = "server" }
