# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-reasoning-gym-env"
version = "0.1.0"
description = "Reasoning Gym Environment for OpenEnv - 100+ procedurally generated reasoning tasks"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv dependencies (required for server functionality)
    "openenv-core @ git+https://github.com/meta-pytorch/OpenEnv.git@main",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.24.0",
    "requests>=2.31.0",
    # Environment-specific dependency
    "reasoning-gym>=0.1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m reasoning_gym_env.server.app
server = "reasoning_gym_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["reasoning_gym_env", "reasoning_gym_env.server"]
package-dir = { "reasoning_gym_env" = ".", "reasoning_gym_env.server" = "server" }
