# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-doom_env"
version = "0.1.0"
description = "Doom environment for OpenEnv - wraps ViZDoom for RL research"
requires-python = ">=3.10"
dependencies = [
    # Core OpenEnv dependencies (required for server functionality)
    # "openenv-core @ git+https://github.com/meta-pytorch/OpenEnv.git@main#subdirectory=src/core",
    "openenv-core>=0.1.0",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
    # Environment-specific dependencies
    "vizdoom>=1.2.0",
    "numpy>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
rendering = [
    "opencv-python>=4.5.0",
    "matplotlib>=3.3.0",
]
gif_generation = [
    "imageio>=2.9.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m doom_env.server.app
server = "doom_env.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["doom_env", "doom_env.server"]
package-dir = { "doom_env" = ".", "doom_env.server" = "server" }
