[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-minesweeper"
version = "0.1.0"
description = "Minesweeper Environment for OpenEnv"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point -enables running via: uv run --project . server
# or: python -m minesweeper.server.app
server = "minesweeper.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["minesweeper", "minesweeper.server"]
package-dir = { "minesweeper" = ".", "minesweeper.server" = "server" }
