# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-openapp-env"
version = "0.1.0"
description = "OpenApp Environment for OpenEnv - web application simulation environment for UI agents"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Core OpenEnv dependencies (required for server functionality)
    "openenv-core>=0.1.0",
    "fastapi>=0.115.0",
    "pydantic>=2.0.0",
    "uvicorn[standard]>=0.24.0",
    "requests>=2.31.0",
    # OpenApps - installed directly from GitHub
    "open_apps @ git+https://github.com/facebookresearch/OpenApps.git",
    # BrowserGym dependencies
    "browsergym>=0.13.3",
    "playwright>=1.40.0",
    # Additional dependencies for web app interaction
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m openapp_env.server.app
server = "openapp_env.server.app:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[tool.hatch.metadata]
allow-direct-references = true
