[project]
name = "warehouse-env"
version = "1.0.0"
description = "Grid-based warehouse logistics optimization environment for reinforcement learning"
authors = [
    {name = "OpenEnv Contributors"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}
keywords = [
    "reinforcement-learning",
    "openenv",
    "warehouse",
    "logistics",
    "pathfinding",
    "robotics"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["warehouse_env"]
package-dir = {"" = "."}

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
