[package]
name = "server_py_ext"
version = "0.1.0"
authors = ["Meta"]
edition = "2021"

[lib]
test = false
doctest = false
crate-type = ["cdylib"]

[dependencies]
agent_bus_proto-rust = { path = "../proto" }
agentbus_api = { path = "../api" }
agentbus_core = { path = "../core" }
agentbus_writeonce = { path = "../impls/writeonce" }
pyo3 = { version = "0.26", features = ["anyhow", "multiple-pymethods", "py-clone"] }
server_py_ext_lib = { path = "lib" }
tokio = { version = "1.47.1", features = ["full", "test-util", "tracing"] }
tracing = { version = "0.1.41", features = ["attributes", "valuable"] }
tracing-glog = { version = "0.4.1", features = ["ansi", "tracing-log"] }
tracing-subscriber = { version = "0.3.20", features = ["chrono", "env-filter", "json", "local-time", "parking_lot", "registry"] }

[features]
extension-module = ["pyo3/extension-module"]
