[package]
name = "agentbus_dynamodb"
version = "0.1.0"
authors = ["Meta"]
edition = "2021"

[dependencies]
agentbus_api = { path = "../../api" }
anyhow = "1.0.101"
aws-sdk-dynamodb = "1.45.0"
bytes = { version = "1.11.1", features = ["serde"] }

[dev-dependencies]
aws-smithy-mocks = "0.1"
tokio = { version = "1.47.1", features = ["full", "test-util", "tracing"] }
