# Hand-written Cargo.toml for oss integration tests

[package]
name = "macro_tests_oss"
version = "0.1.0"
authors = ["Meta"]
edition = "2021"

[[test]]
name = "macro_tests_oss"
path = "src/macro_tests_oss.rs"

[dev-dependencies]
agentbus_api = { path = "../../api" }
agentbus_dynamodb = { path = "../../impls/dynamodb" }
agentbus_tests = { path = ".." }
anyhow = "1.0.98"
aws-sdk-dynamodb = "1.45.0"
fbinit = { version = "0.2.0", git = "https://github.com/facebookexperimental/rust-shed.git", branch = "main" }
fbinit-tokio = { version = "0.1.2", git = "https://github.com/facebookexperimental/rust-shed.git", branch = "main" }
paste = "1.0.14"
testcontainers = "0.27"
tokio = { version = "1.47.1", features = ["full", "test-util", "tracing"] }
